sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:7: error: value =< is not a member of Int
while(i=< x) {
       ^